# buf_read_write

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run_mutants.sh
.cargo/: mutants.toml
.github/workflows/: clippy.yml  mutants.yml  rust.yml
benches/: bufstream_benchmark.rs
src/: lib.rs
tests/: test_bufstream.rs
