[package]
name = "bufstream2"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/avl/bufstream2"
description = "Buffered reader + writer. Like BufWriter and BufReader combined into one."
license = "MIT"

[dependencies]


[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bufstream_benchmark"
harness = false
