[package]
name = "buf_read_write"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/avl/buf_read_write"
description = "Buffered IO. Like BufWriter and BufReader combined into one, with Seek-support."
license = "MIT"

[dependencies]


[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
criterion = { version = "0.5", features = ["html_reports"] }
mutants = "0"

[[bench]]
name = "bufstream_benchmark"
harness = false
